--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"database":"souq1","sql_path":"C:\\Users\\ASUS\\Desktop\\souq.sql"}
+{"database":"souq","sql_path":"C:\\Users\\ASUS\\Desktop\\souq.sql"}
