code generator Solved

--- a/config.json
+++ b/config.json
@@ -3,5 +3,12 @@
     "host": "localhost",
     "user": "root",
     "pass": "",
-    "sql_path": "C:\\Users\\ASUS\\Desktop\\souq.sql"
+    "sql_path": "C:\\Users\\ASUS\\Desktop\\souq.sql",
+    "number_of_zeros_code" : "5",
+    
+    "prefix_code" : {
+        "account":"acc_",
+        "category":"cat_",
+        "item":"it_"
+    }
 }
