--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"deafult_database":"souq","database":"souq","host":"localhost","user":"root","pass":"","sql_path":"C:\\Users\\ASUS\\Desktop\\alHal\\Update_AlHal\\www\\backups\\deafult_database.sql","number_of_zeros_code":"5","prefix_code":{"account":"acc_","category":"cat_","item":"it_"}}
+{"deafult_database":"souq","database":"souq1","host":"localhost","user":"root","pass":"","sql_path":"C:\\Users\\ASUS\\Desktop\\alHal\\Update_AlHal\\www\\backups\\deafult_database.sql","number_of_zeros_code":"5","prefix_code":{"account":"acc_","category":"cat_","item":"it_"}}
