--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "deafult_database": "souq",
-    "database": "souq_\u062c\u0628\u0644\u0629",
+    "database": "souq",
     "host": "localhost",
     "user": "root",
     "pass": "",
