--- a/config.json
+++ b/config.json
@@ -1,10 +1,1 @@
-{
-    "deafult_database": "souq",
-    "database": "souq",
-    "host": "localhost",
-    "user": "root",
-    "pass": "",
-    "sql_path": "backups\\default_database.sql",
-    "number_of_zeros_code_child": "4",
-    "number_of_zeros_code_parent": "0"
-}
+{"deafult_database":"souq","database":"souq","host":"localhost","user":"root","pass":"","sql_path":"backups\\default_database.sql","number_of_zeros_code_child":"4","number_of_zeros_code_parent":"0"}
